--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     color : #FFFFFF;
     background : url("background.jpeg");
     background-size : cover;
-    } 
+    }
 
 
 /* ---------------------------
@@ -26,6 +26,37 @@ body {
     text-align : center;
     perspective : 1000px; /* 3D positioning */
     } 
+
+
+
+/* ---------------------------
+	  STYLES FOR FLIP AND FLIPPED CONTAINER
+	----------------------------- */
+
+/* flip container on hover*/
+.flip-container:hover .flipped, .flip-container.hover .flipped {
+    transform : rotateY(180deg);
+    } 
+
+/* width and height for main flip container and front and back sides */
+.flip-container, .front, .back {
+	width : 100%;
+	height : 450px;
+    } 
+    
+/* flip speed  */
+.flipped {
+    transition : 1.6s;
+    transform-style : preserve-3d;
+    position : relative;
+    } 
+
+/* hide back on flip */
+.front, .back {
+	backface-visibility : hidden;
+	position : absolute;
+	} 
+
 
 /*  --------------------------
 	          FRONT 
