--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     font-size : 30px;
     opacity : 1;
     color : #FFFFFF;
-    background : url("background.jpeg");
+    background : url("Background.jpg");
     background-size : cover;
     }
 
