--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ h1 {
     background-color :wheat;
     width : 70%;
     height : 50px;
-    color : #FFFFFF;
+    color : black;
     } 
 
 /* Btn styles for add and clear buttons */
