--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     ----------------------------- */
     
 body {
-    font-family : 'Roboto Condensed', sans-serif;
     font-size : 30px;
     opacity : 1;
     background : url("Background.jpg");
@@ -19,8 +18,8 @@ body {
 #main-container {
     width : 35.5%;
     height : 550px;
-    margin :  auto;
-    margin-top : 236px;
+    margin :  0 auto;
+    margin-top : 190px;
     text-align : center;
     perspective : 1000px; /* 3D positioning */
     } 
@@ -109,10 +108,33 @@ border : black solid 3px;
 border-radius : 10px;
 }
 
-ul{
-    color: rgb(151, 151, 216);
+/*  style for 2nd col-md-12 div with id set to listItems */
+#listItems {
+	width : 100%;
+	text-align : center;
+	color : rgb(151, 151, 216);
+	} 
+
+/* style for li items created dynamically  through JS */
+li {
+list-style : none;
+text-align : left;
+} 
+
+/* styles for buttons besides each individual list item */
+.listItemButton {
+    background-color : transparent;
+	border : black solid 2px;
+	border-radius : 10px;
+	width : 72px;
+	height : 42px;
+    text-align : center;
+    margin : 10px;
+	color : black;
+    font-size : 20px;
+    font-weight: bold;
 }
-  
+
 @media screen and (min-width: 600px) {
 div.flip-container {
     font-size: 40px;
@@ -122,4 +144,5 @@ div.flip-container {
 @media screen and (max-width: 60px) {
 div.flip-container {
     font-size: 30px;
+}
 }
